--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     overflow-x: hidden;
     color: #3f4850;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .hide {
@@ -11,11 +12,13 @@ h1,
 h2 {
     color: white;
     font-size: 3vw;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 h3 {
     color: #263e60;
     font-size: 1.5rem;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 h4 {
@@ -35,6 +38,7 @@ h6 {
 
 p {
     font-size: 0.9em;
+    font-family: 'Raleway', sans-serif;
 }
 
 h4,
