--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* ---- General Styling --- */
 body {
     overflow-x: hidden;
     color: #3f4850;
@@ -11,7 +12,7 @@ body {
 h1,
 h2 {
     color: white;
-    font-size: 3vw;
+    font-size: 2em;
     font-family: 'Alegreya Sans SC', sans-serif;
 }
 
@@ -48,4 +49,22 @@ p,
 ul {
     margin: 0;
     padding: 0;
+}
+
+/* ---- Header --- */
+header {
+    background-image: url(../img/misty-hills.jpg);
+    background-position: center;
+    background-size: cover;
+    padding: 25%;
+}
+
+#page-header {
+    border: 3vw solid white;
+    color: white;
+    padding: 5%;
+}
+
+#page-header p {
+    font-size: 0.5em;
 }
