--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,25 @@ footer ul li {
     padding: 3.5%;
 }
 
+/* --- Main --- */
+section:nth-child(odd),
+nav {
+    background-color: #f7f3f3;
+}
+
+article {
+    padding-left: 5%;
+    margin: 10% 5% 0 5%;
+    padding-bottom: 10%;
+}
+
+section h3 {
+    text-align: center;
+    margin: 0;
+    padding: 1em 0;
+    border: 20px solid #263e60;
+}
+
 /* --- Footer --- */
 footer ul {
     margin: 20% 0;
