--- a/css/main.css
+++ b/css/main.css
@@ -88,17 +88,26 @@ nav {
     background-color: #f7f3f3;
 }
 
+section h3 {
+    text-align: center;
+    margin: 0;
+    padding: 1em 0;
+    border: 20px solid #263e60;
+}
+
 article {
     padding-left: 5%;
     margin: 10% 5% 0 5%;
     padding-bottom: 10%;
 }
 
-section h3 {
-    text-align: center;
-    margin: 0;
-    padding: 1em 0;
-    border: 20px solid #263e60;
+article p {
+    padding-top: 2%;
+}
+
+.date {
+    font-size: 0.7em;
+    padding-top: 0.5%;
 }
 
 /* --- Footer --- */
