--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,24 @@ article p {
     padding-top: 0.5%;
 }
 
+/* --- Education --- */
+#education h3,
+#community_involvement h3 {
+    padding-top: 5%;
+}
+
+#education h4 {
+    font-size: 1em;
+}
+
+#education h5 {
+    font-size: 0.5em;
+}
+
+h6 {
+    padding-top: 3%;
+}
+
 /* --- Footer --- */
 footer ul {
     margin: 20% 0;
