--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,13 @@ h6 {
     padding-top: 3%;
 }
 
+/* --- Skills --- */
+#skills article ul {
+    list-style-type: none;
+    font-size: 0.9em;
+    padding-top: 2%;
+}
+
 /* --- Footer --- */
 footer ul {
     margin: 20% 0;
