Add padding to interests paragraph

--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,11 @@ h6 {
     padding-top: 4%;
 }
 
+/* --- Interests --- */
+#interests p {
+    padding: 10%;
+}
+
 /* --- Footer --- */
 footer ul {
     margin: 20% 0;
