--- a/css/main.css
+++ b/css/main.css
@@ -386,4 +386,16 @@ footer ul li {
     nav {
         padding: 0;
     }
+    section h3,
+    #education h3 {
+        width: 40%;
+        margin: auto;
+        margin-top: 5%;
+        padding-top: 2.5%;
+    }
+    #education,
+    #community-involvement,
+    #contact {
+        padding-top: 3%;
+    }
 }
