--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,9 @@ footer ul li {
         margin-top: 5%;
         padding-top: 2.5%;
     }
+	.date {
+		font-size: 1em;
+	}
     #education,
     #community-involvement,
     #contact {
@@ -403,6 +406,7 @@ footer ul li {
         width: calc(69% / 3);
         display: inline-block;
         vertical-align: top;
+		margin-bottom: 5%;
     }
     #skills {
         padding-bottom: 10%;
