--- a/css/main.css
+++ b/css/main.css
@@ -431,13 +431,16 @@ footer ul li {
         vertical-align: middle;
         font-size: 1.5em;
     }
-	#contact {
-		padding-bottom: 10%; 
-	}
-	#contact p {
-		font-size: 2em;
-	}
-	#contact p:first-of-type {
-		font-size: 3em;
-	}
+    #contact {
+        padding-bottom: 10%;
+    }
+    #contact p {
+        font-size: 2em;
+    }
+    #contact p:first-of-type {
+        font-size: 3em;
+    }
+    footer ul li {
+        font-size: 2.5em;
+    }
 }
