--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ h6 {
 ul li a {
     text-decoration: none;
     color: #3f4850;
+    display: block;
+    padding: 5% 0;
 }
 
 p {
@@ -243,6 +245,10 @@ footer ul li {
 
 /* --- Media Queries: Desktop --- */
 @media (min-width: 900px) {
+    header {
+        max-height: 900px;
+        padding-top: 8%;
+    }
     h1 {
         font-size: 6em;
     }
@@ -251,8 +257,12 @@ footer ul li {
     }
     nav ul li {
         display: inline-block;
-        width: calc(90% / 6);
-        padding: 5% 0;
+        width: calc(100% / 7);
+        padding: 0;
+        margin: 0 1%;
+    }
+    nav ul li a {
+        padding: 20% 0;
     }
     nav {
         padding: 0;
