Add jQuery color-strip plugin
This commit will also remove the newest version of jQuery and replace it
with an older version to avoid conflicts with the color-strip.

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,14 @@ ul {
     background-color: rgba(232, 221, 219, 0.8);
 }
 
+#colorstrip1,
+#colorstrip2 {
+    overflow: hidden;
+    position: relative;
+    height: 20px;
+    width: 100%;
+}
+
 /* ---- Header --- */
 header {
     background-image: url(../img/misty-hills.jpg);
